source/main.css
@font-face {
  font-family: "Archive";
  src: url("Archive.otf");
}
@font-face {
  font-family: "Ge Body";
  src: url("Ge Body.ttf");
}
::-webkit-scrollbar {
  width: 8px;
}
::-webkit-scrollbar-track-piece {
  background-color: white;
}
::-webkit-scrollbar-thumb {
  background-color: #e0cca3;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #d1b47b;
}
::-webkit-scrollbar-thumb:active {
  background-color: #e5c47e;
}
body {
  overflow-x: hidden;
  margin: 0;
  padding: 0;
  height: 2000px;
  scroll-behavior: smooth;
  -webkit-user-select: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -ms-user-select: none;
}
.top {
  width: 100vw;
  height: 100vh;
}
.header {
  width: 100vw;
  height: 50px;
  margin: 0;
  padding: 0;
  position: fixed;
  background-color: rgba(256, 256, 256, 0.3);
  z-index: 20;
  transition: 0.2s;
}
.sticky {
  position: fixed;
  box-shadow: 0px 1px 3px 3px #AAA;
  background-color: white;
}
.header-item-cont {
  width: 100vw;
  height: 50px;
  float: right;
  display: inline-block;
}
.header-item-cont-sticky {
  width: calc(100vw - 70px);
}
.header-item {
  width: 19%;
  height: 100%;
  display: inline-block;
  text-align: center;
  line-height: 50px;
  color: white;
  font-family: "Ge Body";
  font-size: 1em;
  transition: 0.6s;
  letter-spacing: 10px;
  z-index: 10;
  text-shadow: 1px 1px 0px rgba(0,0,0,0.2);
  color: #666;
  cursor: pointer;
}
.header-item:hover {
  color: #e0cca3;
  text-shadow: 0px 0px 0px rgba(256,256,256,0.5);
}
.header-item-sticky {
  width: 19%;
  height: 100%;
  display: inline-block;
  text-align: center;
  line-height: 50px;
  color: black;
  font-family: "Ge Body";
  font-size: 1.4em;
  transition: 0.2s;
  letter-spacing: 7px;
  text-shadow: 0;
}
.header-item-sticky:hover {
  color: #e0cca3;
}
.logo-cont {
  width: 0;
  height: 0;
  margin: 0;
  padding: 0;
  transition: 0.5s;
  border-radius: 5px;
}
.logo-sticky {
  box-shadow: 0px 1px 1px 1px #AAA;
  background-color: white;
  width: 50px;
  height: 50px;
  margin-left: 10px;
  margin-top: 10px;
  display: inline-block;
  transform: rotate(360deg);
}
.logo {
  width: 100%;
  height: 100%;
}
.menu {
  width: 50px;
  height: 50px;
  right: 0;
  display: none;
  background-color: black;
  margin-right: 10px;
  cursor: pointer;
  z-index: 25;
  position: absolute;
  /* top: 0; */
}
.bg-img-cont {
  width: 100%;
  height: 100%;
  position: relative;
  text-align: center;
}
.bg-img {
  width: 100%;
  height: 100%;
  display: block;
  -webkit-filter: sepia(30%);
  filter: sepia(30%);
}
.title-cont {
  margin: 0 auto;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 10;
  width: 80%;
  height: 200px;
  cursor: pointer;
}
h1 {
  text-align: center;
  font-size: 7.9em;
  color: white;
  text-shadow: 3px 3px 0px rgba(0,0,0,0.2);
  font-family: "Archive";
  margin: 0 auto;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 10;
}







#mid-1 {
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
}

